# RCCPP-coursework02

./: .gitignore  CMakeLists.txt  Doxyfile  RCCPP_coursework02.sublime-project  RCCPP_coursework02.sublime-workspace  README.md  createVideo.m  generateInitialBoard.m
Code/ConwaysGameOfLife/: Board.cc  Board.h  CMakeLists.txt  Cell.cc  Cell.h  ConwaysGameOfLife.cc  Game.cc  Game.h  MyException.cc  MyException.h  readBoardFromFile.h
Testing/: CMakeLists.txt
Testing/ConwaysGameOfLife/: CMakeLists.txt  ConwaysGameOfLifeTest.cc
Testing/ConwaysGameOfLifeData/: GameHistory.txt  InitialBoard.txt  InitialBoardRandom.txt  InitialBoardRandom_200Times200.txt  InitialBoardRandom_200Times400.txt
documentation/: 00_Environments.tex  00_Macros.tex  00_Packages.tex  01_ConwaysGameOfLife.tex  02_Implementation.fdb_latexmk  02_Implementation.tex  Bibliography.bib  Documentation.aux  Documentation.blg  Documentation.dvi  Documentation.fdb_latexmk  Documentation.out  Documentation.ps  Documentation.tex  Documentation.toc  Makefile
documentation/doxygen/: Doxyfile
documentation/doxygen/html/: a00001.html  a00001_a8c5cd1e494ab697076da418ee72ac297_cgraph.map  a00001_a8c5cd1e494ab697076da418ee72ac297_cgraph.md5  a00001_a8c5cd1e494ab697076da418ee72ac297_icgraph.map  a00001_a8c5cd1e494ab697076da418ee72ac297_icgraph.md5  a00001_source.html  a00002.html  a00002_a3bce94b627551e5f96c5f9c6060413f0_cgraph.map  a00002_a3bce94b627551e5f96c5f9c6060413f0_cgraph.md5  a00002_a3bce94b627551e5f96c5f9c6060413f0_icgraph.map  a00002_a3bce94b627551e5f96c5f9c6060413f0_icgraph.md5  a00002_source.html  a00003.html  a00003_a05c50c3ad0a971fab19345b5d94979a9_icgraph.map  a00003_a05c50c3ad0a971fab19345b5d94979a9_icgraph.md5  a00003_a48c9cbc28a05dc9dc8c3973b9eae2268_cgraph.map  a00003_a48c9cbc28a05dc9dc8c3973b9eae2268_cgraph.md5  a00003_acd80f0737bf38112beacd5ca95bef113_icgraph.map  a00003_acd80f0737bf38112beacd5ca95bef113_icgraph.md5  a00003_adeb74b73506b3f6b2ba72aea15168fbe_cgraph.map  a00003_adeb74b73506b3f6b2ba72aea15168fbe_cgraph.md5  a00003_source.html  a00004.html  a00004_source.html  a00005.html  a00005_source.html  a00006.html  a00006_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  a00006_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  a00006_source.html  a00007.html  a00007_source.html  a00008.html  a00008_a20e7468e7c7621b99ed5a35e29a56623_icgraph.map  a00008_a20e7468e7c7621b99ed5a35e29a56623_icgraph.md5  a00008_source.html  a00009.html  a00009_a006b80a1f9b722b42b808c5e38565fc7_icgraph.map  a00009_a006b80a1f9b722b42b808c5e38565fc7_icgraph.md5  a00009_a44a834577815ef24c8ca9aff48485207_icgraph.map  (+817 more)
documentation/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  (+79 more)
documentation/doxygen/latex/: a00001.tex  a00001_a8c5cd1e494ab697076da418ee72ac297_cgraph.md5  a00001_a8c5cd1e494ab697076da418ee72ac297_icgraph.md5  a00002.tex  a00002_a3bce94b627551e5f96c5f9c6060413f0_cgraph.md5  a00002_a3bce94b627551e5f96c5f9c6060413f0_icgraph.md5  a00003.tex  a00003_a05c50c3ad0a971fab19345b5d94979a9_icgraph.md5  a00003_a48c9cbc28a05dc9dc8c3973b9eae2268_cgraph.md5  a00003_acd80f0737bf38112beacd5ca95bef113_icgraph.md5  a00003_adeb74b73506b3f6b2ba72aea15168fbe_cgraph.md5  a00004.tex  a00005.tex  a00006.tex  a00006_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  a00007.tex  a00008.tex  a00008_a20e7468e7c7621b99ed5a35e29a56623_icgraph.md5  a00009.tex  a00009_a006b80a1f9b722b42b808c5e38565fc7_icgraph.md5  a00009_a44a834577815ef24c8ca9aff48485207_icgraph.md5  a00009_a4ec848a39465f40ccb1e371f6eba10d9_icgraph.md5  a00009_a506e819879ada7d016090c0c3f752e2c_icgraph.md5  a00009_a8246ade37e9231a374a5317a11843f7d_icgraph.md5  a00009_aba3e60929ecd1a1867118e907c2078af_icgraph.md5  a00009_ac3e0bf4f63d1954592ca8c5b2be0dded_icgraph.md5  a00009_ae14af0610917234d129937c7f13100ef_icgraph.md5  a00010.tex  a00011.md5  a00011.tex  a00012.md5  a00012.tex  a00012_a5766205abd7004c508c20ddbb5e5555e_cgraph.md5  a00012_aa3f627d84fb256df0404d19d7fd4b784_cgraph.md5  a00012_aefdc11bcfccdf07d2db5f0da3ed8758c_cgraph.md5  a00012_af3774d42ad2d3453d089ca599efe0517_cgraph.md5  a00012_af3774d42ad2d3453d089ca599efe0517_icgraph.md5  a00013.md5  a00013.tex  a00014.md5  (+307 more)
include/: Board.h  Cell.h  ExceptionBoardAccess.h  ExceptionCommandLine.h  Game.h  MyException.h  readCommandLine.h  writeComputationalTimeResultsToFile.h
matlab/: createVideo.m  evaluateSpeedUpOfMPI.m  evaluateSpeedUpOfOpenMP.m  generateInitialBoard.m  readComputationalTimeOfBoard.m
matlab/figures/: SerialMPI_Cells.eps  SerialMPI_Iterations.eps  SerialMPI_Speedup.eps  SerialOpenMP_Cells.eps  SerialOpenMP_Iterations.eps  SerialOpenMP_Speedup.eps
source/: Board.cc  CMakeLists.txt  Cell.cc  ExceptionBoardAccess.cc  ExceptionCommandLine.cc  Game.cc  MyException.cc  main.cc  readCommandLine.cc  writeComputationalTimeResultsToFile.cc
test/: CMakeLists.txt  main_UnitTests.cc
test/data/: GameHistory.txt  InitialBoard.txt  InitialBoardRandom_100Times100.txt  InitialBoardRandom_100Times200.txt  InitialBoardRandom_10Times10.txt  InitialBoardRandom_10Times100.txt  InitialBoardRandom_10Times20.txt  InitialBoardRandom_10Times50.txt  InitialBoardRandom_200Times200.txt  InitialBoardRandom_200Times300.txt  InitialBoardRandom_50Times100.txt  InitialBoardRandomsdf_8Times8.txt  TestBoardNumbered.txt  UnitTest_InitialBoard.txt  UnitTest_InitialBoardRandom_100Times100_OneIteration_MPI.txt  UnitTest_InitialBoardRandom_Transition.txt
